Fix alignment back to homepage button

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ a.back-home {
     background-color: #7D9D9C;
     color: #E4DCCF;
     font-weight: bold;
+    text-align: center;
     display: block;
     margin-right: 60%;
     margin-left: 10%;
